# Copyright (C) 2005, 2006, 2007 Giuseppe Martino <denever@users.sf.net>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_HEADERS = astream.hh blocks.hh configuration.hh exercise.hh mainwindow.hh random.hh setupbox.hh\
	audioexcep.hh blockbox.hh checkbox.hh keyer.hh qrz.hh resources.hh skill.hh keycheckentry.hh\
	kochsetupbox.hh rhythmexcbox.hh




